# swex-ng

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  NOTICE  README-diagnostics.md  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  mapping.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: cert.rs  decode.rs  lib.rs  macos.rs  main.rs  mapping.rs  profile.rs  proxy.rs  settings.rs
src/lib/: api.ts
