[package]
name = "swex-ng"
version = "0.1.1"
description = "SWEX-NG — modern native Summoners War profile exporter"
authors = ["diegomnDev"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "swex_ng_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
# `preserve_order` keeps the game's original key order through parse->serialize
# instead of alphabetizing it, so the exported profile matches sw-exporter's
# JSON.stringify output (V8 preserves insertion order).
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }

# Proxy MITM core (equivalent of SWEX's http-mitm-proxy)
hudsucker = "0.24"
rcgen = "0.14"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"

# Decode (equivalent of the native smon_decryptor addon, now pure Rust)
aes = "0.9"
cbc = { version = "0.2", features = ["alloc"] }
base64 = "0.22"
flate2 = "1"

# misc
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
hex = "0.4"
once_cell = "1"
chrono = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
